[gd_scene load_steps=10 format=3 uid="uid://2o0osj5vvpxb"]

[ext_resource type="Script" path="res://scripts/blade.gd" id="1_8jgp3"]
[ext_resource type="Texture2D" uid="uid://c3ggg6kdxa1dk" path="res://assets/sprites/skills/Green Effect and Bullet 16x16.png" id="2_l0ndr"]
[ext_resource type="AudioStream" uid="uid://bxohnt78304gl" path="res://assets/sprites/skills/blade/bladehit.wav" id="3_oubtw"]
[ext_resource type="AudioStream" uid="uid://unbgdklijvjx" path="res://assets/sprites/skills/blade/blade.wav" id="4_cj3qc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v3t52"]
atlas = ExtResource("2_l0ndr")
region = Rect2(192, 49, 16, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rshb"]
atlas = ExtResource("2_l0ndr")
region = Rect2(160, 49, 16, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcprl"]
atlas = ExtResource("2_l0ndr")
region = Rect2(176, 49, 16, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_euf4p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3t52")
}],
"loop": true,
"name": &"shoot",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rshb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcprl")
}, {
"duration": 30.0,
"texture": SubResource("AtlasTexture_v3t52")
}],
"loop": false,
"name": &"shoot2",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1wegp"]
radius = 6.0

[node name="blade" type="Area2D"]
z_index = 5
collision_layer = 0
script = ExtResource("1_8jgp3")

[node name="blade_animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_euf4p")
animation = &"shoot"

[node name="blade_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1wegp")

[node name="timeintile" type="Timer" parent="."]

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oubtw")
bus = &"SFX"

[node name="blade_launch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cj3qc")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timeintile" to="." method="_on_timeintile_timeout"]
